--- a/default.htm
+++ b/default.htm
@@ -189,7 +189,7 @@
                     <!-- /Account Card -->
                     <div class="col-xs-7">
                       <h3>Current account</h3>
-                      <p class="text-muted text-small">20-33-55 12345601</p>
+                      <p class="text-muted text-small">007-895-412-3245</p>
 
                     </div>
 
@@ -205,7 +205,7 @@
                     <div class="col-xs-7">
 
                       <h3>Card</h3>
-                      <p class="acc-number text-small" >VISA 1154</p>
+                      <p class="acc-number text-small" >VISA 3245</p>
 
                     </div>
                     <div class="col-xs-5">
