--- a/default.htm
+++ b/default.htm
@@ -323,6 +323,111 @@
                           <input type="text" class="form-control swiftcode-evans" id="swiftcode">
                         </div>
                         <div class="form-group">
+                          <label for="country">Destination Country</label>
+                          <br>
+                          <Select class="sendsdetial-box">
+                            <option>Algeria</option>
+                           <option>Angola</option>
+                           <option>Argentina</option>
+                           <option>Armenia</option>
+                           <option>Austria</option>
+                           <option>Azerbaijan</option>
+                           <option>Barbados</option>
+                           <option>Belarus</option>
+                           <option>Belgium</option>
+                           <option>Benin</option>
+                           <option>Bolivia</option>
+                           <option>Botswana</option>
+                           <option>Ukraine</option>
+                           <option>Bulgaria</option>
+                           <option>Burkina Faso</option>
+                           <option>Burundi</option>
+                           <option>Cabo Verde</option>
+                           <option>Cambodia</option>
+                           <option>Cameroon</option>
+                           <option>Chad</option>
+                           <option>Chile</option>
+                           <option>China</option>
+                           <option>Colombia</option>
+                           <option>Congo</option>
+                           <option>Cote d'Ivoire</option>
+                           <option>Croatia</option>
+                           <option>Cuba</option>
+                           <option>Cyprus</option>
+                           <option>Czech Republic</option>
+                           <option>Denmark</option>
+                           <option>Egypt</option>
+                           <option>Ethiopia</option>
+                           <option>Finland</option>
+                           <option>France</option>
+                           <option>Gabon</option>
+                           <option>Gambia</option>
+                           <option>Georgia</option>
+                           <option>Germany</option>
+                           <option>Ghana</option>
+                           <option>Greece</option>
+                           <option>Guinea</option>
+                           <option>Hungary</option>
+                           <option>Iceland</option>
+                           <option>India</option>
+                           <option>Iran</option>
+                           <option>Ireland</option>
+                           <option>Israel</option>
+                           <option>Italy</option>
+                           <option>Jamaica</option>
+                           <option>Japan</option>
+                           <option>Kenya</option>
+                           <option>Lebanon</option>
+                           <option>Liberia</option>
+                           <option>Libya</option>
+                           <option>Madasgascar</option>
+                           <option>Malawi</option>
+                           <option>Malaysia</option>
+                           <option>Mali</option>
+                           <option>Mexico</option>
+                           <option>Monaco</option>
+                           <option>Morocco</option>
+                           <option>Mozambique</option>
+                           <option>Netherlands</option>
+                           <option>New Zealand</option>
+                           <option>Nigeria</option>
+                           <option>Norway</option>
+                           <option>Palestine</option>
+                           <option>Peru</option>
+                           <option>Philippines</option>
+                           <option>Poland</option>
+                           <option>Portugal</option>
+                           <option>Qatar</option>
+                           <option>Romania</option>
+                           <option>Russia</option>
+                           <option>Rwanda</option>
+                           <option>Senegal</option>
+                           <option>Sierra Leone</option>
+                           <option>Singapore</option>
+                           <option>Slovakia</option>
+                           <option>Somalia</option>
+                           <option>South Africa</option>
+                           <option>Spain</option>
+                           <option>Sudan</option>
+                           <option>Sweden</option>
+                           <option>Szitzerland</option>
+                           <option>Tanzania</option>
+                           <option>Thailand</option>
+                           <option>Togo</option>
+                           <option>Tunisia</option>
+                           <option>Turkey</option>
+                           <option>Uganda</option>
+                           <option>United Arab Emirates</option>
+                           <option>United States of America</option>
+                           <option>Uraguay</option>
+                           <option>Venezuela</option>
+                           <option>Vietnam</option>
+                           <option>Zambia</option>
+                           <option>Zimbabwe</option>
+                          </select>
+
+                        </div>
+                        <div class="form-group">
                           <label for="pwd">Transfer Amount ($):</label>
                           <input type="number" class="form-control transferamount-evans" id="usr">
                         </div>
