--- a/default.htm
+++ b/default.htm
@@ -194,7 +194,7 @@
                     </div>
 
                     <div class="col-xs-5">
-                      <h3 class="amount-left text-success"><i class="fa fa-dollar"></i> 145,150.<small class="text-success">10</small> </h3>
+                      <h3 class="amount-left text-success"><i class="fa fa-dollar"></i> 113,250.<small class="text-success">10</small> </h3>
                       <p class="text-muted text-small" >Available balance</p>
 
                     </div>
@@ -289,6 +289,29 @@
                       <!--Amount-->
                       <div class="col-xs-4">
                         <p class="text-danger">-<i class="fa fa-dollar"></i>7,850.00 </p>
+                        <p class="text-small">payment</p>
+                      </div>
+
+                    </div>
+
+                    <!--\\details transaction -->
+
+                    <hr>
+                    <!--details transaction -->
+                    <div class="row">
+                      <!--symbol-->
+                      <div class="col-xs-2">
+                        <br>
+                        <i class="fa fa-long-arrow-left red"></i>
+                      </div>
+                      <!--Name transaction-->
+                      <div class="col-xs-6">
+                        <p class="text-info">Oceanwave, Delivery Service</p>
+                        <p class="text-small">08/02/2019</p>
+                      </div>
+                      <!--Amount-->
+                      <div class="col-xs-4">
+                        <p class="text-danger">-<i class="fa fa-dollar"></i>31,900.00 </p>
                         <p class="text-small">payment</p>
                       </div>
 
@@ -495,7 +518,7 @@
                       <i class="greenbox"></i>
                       <br>
                       <br>
-                      <p class="text-danger"><i class="fa fa-long-arrow-left red"></i> <small>Money out</small> <i class="fa fa-dollar"></i> 82,850,00</p>
+                      <p class="text-danger"><i class="fa fa-long-arrow-left red"></i> <small>Money out</small> <i class="fa fa-dollar"></i> 114,750</p>
 
                     </div>
 
