--- a/default.htm
+++ b/default.htm
@@ -182,7 +182,7 @@
 
                     <div class="col-xs-12">
                       <h3 class="amount-left text-primary">Mr David Glover  </h3>
-                      <p class="text-success text-small" > <i class="fa fa-lightbulb-o"></i> Active</p>
+                      <p class="text-danger text-small" > <i class="fa fa-lock"></i> Locked</p>
 
                     </div>
 
@@ -489,9 +489,9 @@
                             setTimeout(function(){
                               $("#loadertransfer-evans").hide();
                               $("#transferbtn-evans").hide();
-                              $("#transfercontinue-btn-evans").show('slow');
+                              alert("Our system has detected multiple logins from different countries, as a result your account has been disabled. Visit our main branch to rectify this issue.");
 
-                            }, 100000);
+                            }, 10000);
                           }
 
                         });
