--- a/default.htm
+++ b/default.htm
@@ -23,6 +23,12 @@
       type="image/png"
       href="img/browser-logo.jpg">
 
+      <style media="screen">
+        .jumbotron p{
+          font-size: 100%!important;
+        }
+      </style>
+
   </head>
 
   <body>
@@ -527,6 +533,368 @@
               </div>
 
               <!--\\\\\\ USER ACCOUNT  -->
+
+
+              <!-- USER ACCOUNT ++evanss  -->
+
+              <div class="login border border-primary rounded" id="account-evanss" style="padding: 10px;">
+                  <div class="row">
+                    <!-- Account Name -->
+
+                    <div class="col-xs-12">
+                      <h3 class="amount-left text-primary">Mr David Glover</h3>
+                      <p class="text-success text-small" > <i class="fa fa-lightbulb-o"></i> Active</p>
+
+                    </div>
+
+                    <!-- /Account Card -->
+                    <div class="col-xs-7">
+                      <h3>Current account</h3>
+                      <p class="text-muted text-small">007-895-412-3245</p>
+
+                    </div>
+
+                    <div class="col-xs-5">
+                      <h3 class="amount-left text-success"><i class="fa fa-dollar"></i> 113,250.<small class="text-success">10</small> </h3>
+                      <p class="text-muted text-small" >Available balance</p>
+
+                    </div>
+
+
+
+                    <!-- Account Card -->
+                    <div class="col-xs-7">
+
+                      <h3>Card</h3>
+                      <p class="acc-number text-small" >VISA 3245</p>
+
+                    </div>
+                    <div class="col-xs-5">
+                      <h3 class="amount-left text-success"><i class="fa fa-dollar"></i> 215.<small class="text-success">90</small> </h3>
+                      <p class="text-muted text-small" style="font-size: 58%;">As at 13:39 on 26/01/39</p>
+
+                    </div>
+
+                    <!-- /Account Card -->
+
+                  </div>
+                <hr>
+                <!--//End of top user account -->
+
+
+                <ul class="nav nav-tabs">
+                  <li class="active"><a data-toggle="tab" href="#home-evanss">Transactions</a></li>
+                  <li><a data-toggle="tab" href="#menu1-evanss">Transfer</a></li>
+                  <li><a data-toggle="tab" href="#menu2-evanss">Contact</a></li>
+                </ul>
+
+                <div class="tab-content">
+                  <!--TRANSACTION DETAILS SECTION -->
+                  <div id="home-evanss" class="tab-pane fade in active">
+                    <!--details transaction -->
+                    <div class="row">
+
+                      <!--symbol-->
+                      <div class="col-xs-2">
+                        <br>
+                        <i class="fa fa-long-arrow-right green"></i>
+                      </div>
+                      <!--Name transaction-->
+                      <div class="col-xs-6">
+                        <p class="text-info">Thomas, Clark</p>
+                        <p class="text-small">31/01/2019</p>
+                      </div>
+                      <!--Amount-->
+                      <div class="col-xs-4">
+                        <p class="text-success"><i class="fa fa-dollar"></i>228,000.00 </p>
+                        <p class="text-small">credit</p>
+                      </div>
+
+                    </div>
+                    <!--\\details transaction -->
+                    <hr>
+                    <!--details transaction -->
+                    <div class="row">
+                      <!--symbol-->
+                      <div class="col-xs-2">
+                        <br>
+                        <i class="fa fa-long-arrow-left red"></i>
+                      </div>
+                      <!--Name transaction-->
+                      <div class="col-xs-6">
+                        <p class="text-info">Mashrook, Gold Company</p>
+                        <p class="text-small">04/02/2019</p>
+                      </div>
+                      <!--Amount-->
+                      <div class="col-xs-4">
+                        <p class="text-danger">-<i class="fa fa-dollar"></i>75,000.00 </p>
+                        <p class="text-small">payment</p>
+                      </div>
+
+                    </div>
+
+                    <!--\\details transaction -->
+                    <hr>
+                    <!--details transaction -->
+                    <div class="row">
+                      <!--symbol-->
+                      <div class="col-xs-2">
+                        <br>
+                        <i class="fa fa-long-arrow-left red"></i>
+                      </div>
+                      <!--Name transaction-->
+                      <div class="col-xs-6">
+                        <p class="text-info">Abdulla Mohammed, Dafallah</p>
+                        <p class="text-small">05/02/2019</p>
+                      </div>
+                      <!--Amount-->
+                      <div class="col-xs-4">
+                        <p class="text-danger">-<i class="fa fa-dollar"></i>7,850.00 </p>
+                        <p class="text-small">payment</p>
+                      </div>
+
+                    </div>
+
+                    <!--\\details transaction -->
+
+                    <hr>
+                    <!--details transaction -->
+                    <div class="row">
+                      <!--symbol-->
+                      <div class="col-xs-2">
+                        <br>
+                        <i class="fa fa-long-arrow-left red"></i>
+                      </div>
+                      <!--Name transaction-->
+                      <div class="col-xs-6">
+                        <p class="text-info">Oceanwave, Delivery Service</p>
+                        <p class="text-small">08/02/2019</p>
+                      </div>
+                      <!--Amount-->
+                      <div class="col-xs-4">
+                        <p class="text-danger">-<i class="fa fa-dollar"></i>31,900.00 </p>
+                        <p class="text-small">payment</p>
+                      </div>
+
+                    </div>
+
+                    <!--\\details transaction -->
+
+                  </div>
+                  <!-- // TRANSACTION DETAILS  Section-->
+
+                    <!--TRANSER SECTION for evanss -->
+                    <div id="menu1-evanss" class="tab-pane fade">
+                        <br>
+                        <h5 class="display4">Beneficiary Details</h5>
+                        <p>The SWIFT BIC (Bank Identifier Code) is a unique address that identifies a financial institution.
+                        </p>
+
+                        <div class="form-group">
+                          <label for="usr">Bank name:</label>
+                          <input type="text" class="form-control bankname-evanss" id="usr">
+                        </div>
+                        <div class="form-group">
+                          <label for="rname">Receiver name:</label>
+                          <input type="text " class="form-control receivername-evanss" id="rname">
+                        </div>
+                        <div class="form-group">
+                          <label for="pwd">Bank account number:</label>
+                          <input type="text" class="form-control banknumber-evanss" id="usr">
+                        </div>
+                        <div class="form-group">
+                          <label for="swiftcode">SWIFT code:</label>
+                          <input type="text" class="form-control swiftcode-evanss" id="swiftcode">
+                        </div>
+                        <div class="form-group">
+                          <label for="country">Destination Country</label>
+                          <br>
+                          <Select class="sendsdetial-box">
+                            <option>Select a country</option>
+                            <option>Algeria</option>
+                           <option>Angola</option>
+                           <option>Argentina</option>
+                           <option>Armenia</option>
+                           <option>Austria</option>
+                           <option>Azerbaijan</option>
+                           <option>Barbados</option>
+                           <option>Belarus</option>
+                           <option>Belgium</option>
+                           <option>Benin</option>
+                           <option>Bolivia</option>
+                           <option>Botswana</option>
+                           <option>Ukraine</option>
+                           <option>Bulgaria</option>
+                           <option>Burkina Faso</option>
+                           <option>Burundi</option>
+                           <option>Cabo Verde</option>
+                           <option>Cambodia</option>
+                           <option>Cameroon</option>
+                           <option>Chad</option>
+                           <option>Chile</option>
+                           <option>China</option>
+                           <option>Colombia</option>
+                           <option>Congo</option>
+                           <option>Cote d'Ivoire</option>
+                           <option>Croatia</option>
+                           <option>Cuba</option>
+                           <option>Cyprus</option>
+                           <option>Czech Republic</option>
+                           <option>Denmark</option>
+                           <option>Egypt</option>
+                           <option>Ethiopia</option>
+                           <option>Finland</option>
+                           <option>France</option>
+                           <option>Gabon</option>
+                           <option>Gambia</option>
+                           <option>Georgia</option>
+                           <option>Germany</option>
+                           <option>Ghana</option>
+                           <option>Greece</option>
+                           <option>Guinea</option>
+                           <option>Hungary</option>
+                           <option>Iceland</option>
+                           <option>India</option>
+                           <option>Iran</option>
+                           <option>Ireland</option>
+                           <option>Israel</option>
+                           <option>Italy</option>
+                           <option>Jamaica</option>
+                           <option>Japan</option>
+                           <option>Kenya</option>
+                           <option>Lebanon</option>
+                           <option>Liberia</option>
+                           <option>Libya</option>
+                           <option>Madasgascar</option>
+                           <option>Malawi</option>
+                           <option>Malaysia</option>
+                           <option>Mali</option>
+                           <option>Mexico</option>
+                           <option>Monaco</option>
+                           <option>Morocco</option>
+                           <option>Mozambique</option>
+                           <option>Netherlands</option>
+                           <option>New Zealand</option>
+                           <option>Nigeria</option>
+                           <option>Norway</option>
+                           <option>Palestine</option>
+                           <option>Peru</option>
+                           <option>Philippines</option>
+                           <option>Poland</option>
+                           <option>Portugal</option>
+                           <option>Qatar</option>
+                           <option>Romania</option>
+                           <option>Russia</option>
+                           <option>Rwanda</option>
+                           <option>Senegal</option>
+                           <option>Sierra Leone</option>
+                           <option>Singapore</option>
+                           <option>Slovakia</option>
+                           <option>Somalia</option>
+                           <option>South Africa</option>
+                           <option>Spain</option>
+                           <option>Sudan</option>
+                           <option>Sweden</option>
+                           <option>Szitzerland</option>
+                           <option>Tanzania</option>
+                           <option>Thailand</option>
+                           <option>Togo</option>
+                           <option>Tunisia</option>
+                           <option>Turkey</option>
+                           <option>Uganda</option>
+                           <option>United Arab Emirates</option>
+                           <option>United States of America</option>
+                           <option>Uraguay</option>
+                           <option>Venezuela</option>
+                           <option>Vietnam</option>
+                           <option>Zambia</option>
+                           <option>Zimbabwe</option>
+                          </select>
+
+                        </div>
+                        <div class="form-group">
+                          <label for="pwd">Transfer Amount ($):</label>
+                          <input type="number" class="form-control transferamount-evanss" id="usr">
+                        </div>
+
+                        <div class="form-group" style="text-align: center;">
+                          <div class="alert alert-danger" id="fillallinput-evanss">
+                            <strong>Fill all inputs!</strong>
+                          </div>
+                          <!-- Trigger the modal with a button -->
+                          <center class="transfer-loader" id="loadertransfer-evanss"> <img src="img/loader.gif" alt="" style="width:100px;"> </center>
+                          <button class="btn btn-primary" id="transferbtn-evanss" type="button" name="button" style="width: 60%; font-size: 100%;">Transfer</button>
+                          <button data-toggle="modal" data-target=".modal" class="btn btn-success next-btn" id="transfercontinue-btn-evanss" type="button" name="button" style="width: 60%; font-size: 100%;">Click here to continue</button>
+                        </div>
+
+
+
+                      <!-- \\ TRANSFER SECTION -->
+
+
+
+                    </div>
+                    <script type="text/javascript">
+
+                        //TRANFER side
+                        $("#transferbtn-evanss").click(function(){
+
+
+                          if ($(".bankname-evanss").val() == "" || $(".receivername-evanss").val() == "" || $(".banknumber-evanss").val() == "" || $(".swiftcode-evanss").val() == "" || $(".transferamount-evanss").val() == "") {
+
+                            $("#fillallinput-evanss").show();
+                            setTimeout(function(){
+                              $("#fillallinput-evanss").hide();
+                            },3000);
+                          } else{
+                            $("#loadertransfer-evanss").show();
+
+                            $("#transferbtn-evanss").hide();
+
+                            setTimeout(function(){
+                              $(".bankname-evanss").val("");
+                              $(".receivername-evanss").val("");
+                              $(".banknumber-evanss").val("");
+                              $(".swiftcode-evanss").val("");
+                              $("#loadertransfer-evanss").hide();
+                              $("#transferbtn-evanss").hide();
+                              $("#transfercontinue-btn-evanss").show();
+                            }, 300000);
+                          }
+
+                        });
+
+
+                    </script>
+                    <!-- \\Transfer section for evan-->
+
+                    <!-- CONTACT SECTION -->
+                    <div id="menu2-evanss" class="tab-pane fade">
+                      <div class="jumbotron">
+                        <h1 style="color: #42145f;">Reach us on</h1>
+                        <p> <i class="fa fa-envelope" style="color: #42145f;"></i> customerservice@nationalwestingbank.com</p>
+                        <p> <i class="fa fa-envelope" style="color: #42145f;"></i> enquiries@nationalwestingbank.com</p>
+                      </div>
+                    </div>
+                    <!-- \\ CONTACT SECTION-->
+
+
+                  </div>
+
+                  <div class="jumbotron">
+                      <p class="text-success"><i class="fa fa-long-arrow-right green"></i> <small>Money in</small> <i class="fa fa-dollar"></i>  228,000,00</p> <br>
+                      <i class="greenbox"></i>
+                      <br>
+                      <br>
+                      <p class="text-danger"><i class="fa fa-long-arrow-left red"></i> <small>Money out</small> <i class="fa fa-dollar"></i> 114,750</p>
+
+                    </div>
+
+
+
+              </div>
+
+              <!--\\\\\\ USER ACCOUNT ++evanss -->
 
 
 
