--- a/default.htm
+++ b/default.htm
@@ -182,7 +182,8 @@
 
               <!-- USER ACCOUNT  -->
 
-              <div class="login border border-primary rounded" id="account-evans" style="padding: 10px;">
+
+              <!--<div class="login border border-primary rounded" id="account-evans" style="padding: 10px;">
                   <div class="row">
                     <!-- Account Name -->
 
@@ -495,7 +496,7 @@
                             setTimeout(function(){
                               $("#loadertransfer-evans").hide();
                               $("#transferbtn-evans").hide();
-                              alert("Our system has detected multiple logins from different countries, as a result your account has been disabled. Visit our main branch to rectify this issue.");
+
 
                             }, 10000);
                           }
@@ -530,12 +531,12 @@
 
 
 
-              </div>
+              </div>  -->
 
               <!--\\\\\\ USER ACCOUNT  -->
 
 
-              <!-- USER ACCOUNT ++evanss locked  -->
+              <!-- USER ACCOUNT ++evanss locked =unclocked  -->
 
               <div class="login border border-primary rounded" id="account-evanss" style="padding: 10px;">
                   <div class="row">
@@ -543,7 +544,7 @@
 
                     <div class="col-xs-12">
                       <h3 class="amount-left text-primary">Mr David Glover</h3>
-                      <p class="text-danger text-small" > <i class="fa fa-lock"></i> Locked</p>
+                      <p class="text-success text-small" > <i class="fa fa-lightbulb-o"></i> Active</p>
 
                     </div>
 
@@ -851,7 +852,7 @@
                               $("#fillallinput-evanss").hide();
                             },3000);
                           } else{
-                            alert("Our system has detected multiple logins from different countries, as a result your account has been disabled. Visit our main branch to rectify this issue.");
+
 
                             setTimeout(function(){
                               $(".bankname-evanss").val("");
