--- a/default.htm
+++ b/default.htm
@@ -182,8 +182,7 @@
 
               <!-- USER ACCOUNT  -->
 
-
-              <!--<div class="login border border-primary rounded" id="account-evans" style="padding: 10px;">
+              <div class="login border border-primary rounded" id="account-evans" style="padding: 10px;">
                   <div class="row">
                     <!-- Account Name -->
 
@@ -531,7 +530,7 @@
 
 
 
-              </div>  -->
+              </div>
 
               <!--\\\\\\ USER ACCOUNT  -->
 
