--- a/default.htm
+++ b/default.htm
@@ -555,7 +555,7 @@
                     </div>
 
                     <div class="col-xs-5">
-                      <h3 class="amount-left text-success"><i class="fa fa-dollar"></i> 120,250.<small class="text-success">10</small> </h3>
+                      <h3 class="amount-left text-success"><i class="fa fa-dollar"></i> 90,250.<small class="text-success">10</small> </h3>
                       <p class="text-muted text-small" >Available balance</p>
 
                     </div>
@@ -662,7 +662,6 @@
                     <hr>
 
                     <!--details transaction -->
-
                     <div class="row">
                       <!--symbol-->
                       <div class="col-xs-2">
@@ -681,10 +680,36 @@
                       </div>
 
                     </div>
-
                     <!--\\details transaction -->
 
                     <hr>
+
+                    <!--details transaction  19 march oceanwave-->
+                    <div class="row">
+                      <!--symbol-->
+                      <div class="col-xs-2">
+                        <br>
+                        <i class="fa fa-long-arrow-left red"></i>
+                      </div>
+                      <!--Name transaction-->
+                      <div class="col-xs-6">
+                        <p class="text-info">Oceanwave, Delivery Service</p>
+                        <p class="text-small">19/03/2019</p>
+                      </div>
+                      <!--Amount-->
+                      <div class="col-xs-4">
+                        <p class="text-danger">-<i class="fa fa-dollar"></i>24,000.00 </p>
+                        <p class="text-small">payment</p>
+                      </div>
+
+                    </div>
+                    <!--\\details transaction -->
+
+                    <hr>
+
+                    <!--details transaction  19 march evansss client-->
+
+                    <!--\\details transaction -->
 
                   </div>
                   <!-- // TRANSACTION DETAILS  Section-->
@@ -896,7 +921,7 @@
                       <i class="greenbox"></i>
                       <br>
                       <br>
-                      <p class="text-danger"><i class="fa fa-long-arrow-left red"></i> <small>Money out</small> <i class="fa fa-dollar"></i> 107,750,00</p>
+                      <p class="text-danger"><i class="fa fa-long-arrow-left red"></i> <small>Money out</small> <i class="fa fa-dollar"></i> 131,750,00</p>
 
                     </div>
 
