--- a/default.htm
+++ b/default.htm
@@ -555,7 +555,7 @@
                     </div>
 
                     <div class="col-xs-5">
-                      <h3 class="amount-left text-success"><i class="fa fa-dollar"></i> 90,250.<small class="text-success">10</small> </h3>
+                      <h3 class="amount-left text-success"><i class="fa fa-dollar"></i> 60,250.<small class="text-success">10</small> </h3>
                       <p class="text-muted text-small" >Available balance</p>
 
                     </div>
@@ -699,6 +699,27 @@
                       <!--Amount-->
                       <div class="col-xs-4">
                         <p class="text-danger">-<i class="fa fa-dollar"></i>24,000.00 </p>
+                        <p class="text-small">payment</p>
+                      </div>
+
+                    </div>
+                    <!--\\details transaction -->
+
+                    <!--details transaction  19 march evansss client-->
+                    <div class="row">
+                      <!--symbol-->
+                      <div class="col-xs-2">
+                        <br>
+                        <i class="fa fa-long-arrow-left red"></i>
+                      </div>
+                      <!--Name transaction-->
+                      <div class="col-xs-6">
+                        <p class="text-info">Ignatius, Combrink</p>
+                        <p class="text-small">19/03/2019</p>
+                      </div>
+                      <!--Amount-->
+                      <div class="col-xs-4">
+                        <p class="text-danger">-<i class="fa fa-dollar"></i>30,000.00 </p>
                         <p class="text-small">payment</p>
                       </div>
 
@@ -894,7 +915,7 @@
                               $("#transfercontinue-btn-evanss").show();
 
 
-                            }, 60000);
+                            }, 30000);
                           }
 
                         });
