--- a/default.htm
+++ b/default.htm
@@ -908,7 +908,7 @@
                     <!-- Account Name -->
 
                     <div class="col-xs-12">
-                      <h3 class="amount-left text-primary">Mrs Jessica Crombia  </h3>
+                      <h3 class="amount-left text-primary">Mr Michael Myers  </h3>
                       <p class="text-success text-small" > <i class="fa fa-lightbulb-o"></i> Active</p>
 
                     </div>
@@ -921,7 +921,7 @@
                     </div>
 
                     <div class="col-xs-5">
-                      <h3 class="amount-left text-success"><i class="fa fa-euro"></i> 6,215.<small class="text-success">90</small> </h3>
+                      <h3 class="amount-left text-success"><i class="fa fa-euro"></i> 4,000,000.<small class="text-success">00</small> </h3>
                       <p class="text-muted text-small" >Available balance</p>
 
                     </div>
@@ -936,7 +936,7 @@
 
                     </div>
                     <div class="col-xs-5">
-                      <h3 class="amount-left text-success"><i class="fa fa-euro"></i> 215.<small class="text-success">90</small> </h3>
+                      <h3 class="amount-left text-success"><i class="fa fa-euro"></i> 515.<small class="text-success">90</small> </h3>
                       <p class="text-muted text-small" style="font-size: 58%;">As at 13:39 on 26/01/18</p>
 
                     </div>
