--- a/default.htm
+++ b/default.htm
@@ -903,7 +903,7 @@
 
               <!-- USER ACCOUNT evans-->
 
-              <div class="login-account border border-primary rounded" style="padding: 10px;">
+              <div class="login-account border border-primary rounded" id="account-shutto" style="padding: 10px;">
                   <div class="row">
                     <!-- Account Name -->
 
