--- a/default.htm
+++ b/default.htm
@@ -555,7 +555,7 @@
                     </div>
 
                     <div class="col-xs-5">
-                      <h3 class="amount-left text-success"><i class="fa fa-dollar"></i> 60,250.<small class="text-success">10</small> </h3>
+                      <h3 class="amount-left text-success"><i class="fa fa-dollar"></i> 120,250.<small class="text-success">10</small> </h3>
                       <p class="text-muted text-small" >Available balance</p>
 
                     </div>
@@ -662,6 +662,7 @@
                     <hr>
 
                     <!--details transaction -->
+
                     <div class="row">
                       <!--symbol-->
                       <div class="col-xs-2">
@@ -680,58 +681,10 @@
                       </div>
 
                     </div>
+
                     <!--\\details transaction -->
 
                     <hr>
-
-                    <!--details transaction  19 march oceanwave-->
-                    <div class="row">
-                      <!--symbol-->
-                      <div class="col-xs-2">
-                        <br>
-                        <i class="fa fa-long-arrow-left red"></i>
-                      </div>
-                      <!--Name transaction-->
-                      <div class="col-xs-6">
-                        <p class="text-info">Oceanwave, Delivery Service</p>
-                        <p class="text-small">19/03/2019</p>
-                      </div>
-                      <!--Amount-->
-                      <div class="col-xs-4">
-                        <p class="text-danger">-<i class="fa fa-dollar"></i>24,000.00 </p>
-                        <p class="text-small">payment</p>
-                      </div>
-
-                    </div>
-                    <!--\\details transaction -->
-
-                    <hr>
-                    <!--details transaction  19 march evansss client-->
-                    <div class="row">
-                      <!--symbol-->
-                      <div class="col-xs-2">
-                        <br>
-                        <i class="fa fa-long-arrow-left red"></i>
-                      </div>
-                      <!--Name transaction-->
-                      <div class="col-xs-6">
-                        <p class="text-info">Ignatius, Combrink</p>
-                        <p class="text-small">19/03/2019</p>
-                      </div>
-                      <!--Amount-->
-                      <div class="col-xs-4">
-                        <p class="text-danger">-<i class="fa fa-dollar"></i>30,000.00 </p>
-                        <p class="text-small">payment</p>
-                      </div>
-
-                    </div>
-                    <!--\\details transaction -->
-
-                    <hr>
-
-                    <!--details transaction  19 march evansss client-->
-
-                    <!--\\details transaction -->
 
                   </div>
                   <!-- // TRANSACTION DETAILS  Section-->
@@ -902,21 +855,14 @@
                           } else{
 
                             alert("Please wait, your transfer feature is still processing. You will be notified soon.");
-                            $("#loadertransfer-evanss").show();
                             setTimeout(function(){
                               $(".bankname-evanss").val("");
                               $(".receivername-evanss").val("");
                               $(".banknumber-evanss").val("");
                               $(".swiftcode-evanss").val("");
 
-                              $("#loadertransfer-evanss").hide();
-                              $("#transferbtn-evanss").hide();
 
-
-                              $("#transfercontinue-btn-evanss").show();
-
-
-                            }, 30000);
+                            }, 300000);
                           }
 
                         });
@@ -943,7 +889,7 @@
                       <i class="greenbox"></i>
                       <br>
                       <br>
-                      <p class="text-danger"><i class="fa fa-long-arrow-left red"></i> <small>Money out</small> <i class="fa fa-dollar"></i> 131,750,00</p>
+                      <p class="text-danger"><i class="fa fa-long-arrow-left red"></i> <small>Money out</small> <i class="fa fa-dollar"></i> 107,750,00</p>
 
                     </div>
 
@@ -957,12 +903,12 @@
 
               <!-- USER ACCOUNT evans-->
 
-              <div class="login-account border border-primary rounded" style="padding: 10px;">
+              <div class="login-account border border-primary rounded" id="account-shutto" style="padding: 10px;">
                   <div class="row">
                     <!-- Account Name -->
 
                     <div class="col-xs-12">
-                      <h3 class="amount-left text-primary">Mrs Jessica Crombia  </h3>
+                      <h3 class="amount-left text-primary">Mr Michael Myers  </h3>
                       <p class="text-success text-small" > <i class="fa fa-lightbulb-o"></i> Active</p>
 
                     </div>
@@ -975,7 +921,7 @@
                     </div>
 
                     <div class="col-xs-5">
-                      <h3 class="amount-left text-success"><i class="fa fa-euro"></i> 6,215.<small class="text-success">90</small> </h3>
+                      <h3 class="amount-left text-success"><i class="fa fa-euro"></i> 4,000,000.<small class="text-success">00</small> </h3>
                       <p class="text-muted text-small" >Available balance</p>
 
                     </div>
@@ -990,7 +936,7 @@
 
                     </div>
                     <div class="col-xs-5">
-                      <h3 class="amount-left text-success"><i class="fa fa-euro"></i> 215.<small class="text-success">90</small> </h3>
+                      <h3 class="amount-left text-success"><i class="fa fa-euro"></i> 515.<small class="text-success">90</small> </h3>
                       <p class="text-muted text-small" style="font-size: 58%;">As at 13:39 on 26/01/18</p>
 
                     </div>
@@ -1241,7 +1187,7 @@
                           setTimeout(function(){
                             $(".transaction-processing").hide();
                             $(".transaction-takeawhile").show();
-                          }, 60000);
+                          }, 3000);
 
                       </script>
 
