--- a/default.htm
+++ b/default.htm
@@ -26,7 +26,7 @@
     <header>
       <div id="account-top" class="container">
 
-        <button type="button" id="acc-logout-btn" class="btn btn-default"> <a href="default.htm">Log-out</a> </button>
+        <button type="button" id="acc-logout-btn" class="btn btn-primary"> <a href="default.htm">Log-out</a> </button>
       </div>
     </header>
 
